# energy-demand-forecasting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  SCHEDULE.md  compose.yaml  pyproject.toml
src/edf/: __init__.py
src/edf/api/: main.py  schemas.py
src/edf/utils/: config.py  logger.py
