[project]
name = "energy-demand-forecasting"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ar52015", email = "aryan.arora2015@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "edf"
