[project]
name = "energy-demand-forecasting"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ar52015", email = "aryan.arora2015@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.1",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]==0.47.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "edf"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov>=7.1.0",
    "ruff==0.15.13",
    "types-requests>=2.33.0.20260518",
]
